ui update, minor api fixes

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -53,7 +53,9 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+html, body {
+    background-color: white;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
