--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -2,18 +2,37 @@
     max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
-    text-align: center;
+}
+.centered-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+}
+.commentCard {
+    width: 400px;
+    margin-bottom: 16px;
+    padding: 16px;
 }
 
-tr:nth-child(even) {
-    background: #F2F2F2;
+.commentCard-header {
+    margin-bottom: 8px;
+    font-size: 16px;
 }
 
-tr:nth-child(odd) {
-    background: #FFF;
+.commentCard-email {
+    font-size: 14px;
+    color: #888;
+    margin-left: 8px;
 }
 
-th, td {
-    padding-left: 1rem;
-    padding-right: 1rem;
+.commentCard-text {
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 16px;
+}
+
+.commentCard-actions {
+    display: flex;
+    justify-content: space-between;
 }
